# woven

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  get.sh  woven-ctrl.desktop  woven.lua  woven.service
config/: woven.lua
config/plugins/: battery.lua  cava.lua  greeting.lua  launcher.lua  network.lua  nowplaying.lua
crates/woven-bar/: Cargo.toml
crates/woven-bar/src/: bar.rs  config.rs  lib.rs  main.rs  wayland.rs
crates/woven-bar/src/widgets/: cava.rs  date.rs  mod.rs
crates/woven-common/: Cargo.toml
crates/woven-common/src/: errors.rs  ipc.rs  lib.rs  session.rs  types.rs
crates/woven-ctrl/: Cargo.toml
crates/woven-ctrl/src/: compositor_config.rs  helpers.rs  main.rs  setup.rs
crates/woven-lite/: Cargo.toml  build.rs
crates/woven-lite/src/: dashboard.rs  main.rs  screencopy_compat.rs  sysinfo.rs  theme.rs  weather.rs
crates/woven-plugin/: Cargo.toml
crates/woven-plugin/src/: lib.rs  loader.rs  manifest.rs  registry.rs
crates/woven-protocols/: Cargo.toml
crates/woven-protocols/src/: ext_image.rs  lib.rs  screencopy.rs  shm.rs
crates/woven-render/: Cargo.toml
crates/woven-render/src/: bar_surface.rs  draw.rs  icons.rs  input.rs  lib.rs  surface.rs  text.rs  thread.rs  thumbnail.rs
crates/woven-sys/: Cargo.toml
crates/woven-sys/src/: main.rs
crates/woven-sys/src/compositor/: backend.rs  hyprland.rs  mod.rs  niri.rs  registry.rs  river.rs  sway.rs  xwayland.rs
crates/woven-sys/src/lua/: mod.rs  registry.rs  runtime.rs  sandbox.rs  ws_namer.rs
crates/woven-sys/src/sys/: audio.rs  http.rs  ipc_server.rs  mod.rs  proc_metrics.rs
plugins/: CONTRIBUTING.md  PLUGIN_API.md  app_rules.lua  battery.lua  cava.ini  cava.lua  clock.lua  date.lua  greeting.lua  launcher.lua  network.lua  nowplaying.lua  sysinfo.lua  uptime.lua  ws_logger.lua
runtime/: boot.lua
runtime/compositor/: detect.lua  hyprland.lua  niri.lua  sway.lua
runtime/core/: hooks.lua  init.lua  metrics.lua  overlay.lua  window.lua  workspace.lua
runtime/fallback/: defaults.lua  guide.lua  init.lua
runtime/ui/: animation.lua  layout.lua  theme.lua
scripts/: deploy.sh
src/: main.rs
