[workspace]
members = [
    "crates/woven-sys",
    "crates/woven-render",
    "crates/woven-common",
    "crates/woven-ctrl",
]
resolver = "2"

[workspace.dependencies]
# async
tokio             = { version = "1",    features = ["full"] }
anyhow            = "1"
thiserror         = "2"
async-trait       = "0.1"
crossbeam-channel = "0.5"

# lua vm
mlua = { version = "0.10", features = ["lua54", "send", "async", "vendored"] }

# wayland
smithay-client-toolkit = "0.19"
wayland-client         = "0.31"
wayland-protocols      = { version = "0.32", features = ["client"] }
wayland-protocols-wlr  = { version = "0.3",  features = ["client"] }

# serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# xcb for xwayland pid resolution
xcb = "1.3"

# rendering
tiny-skia = "0.11"
fontdue   = "0.9"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
