[workspace]
members = [
    "crates/woven-sys",
    "crates/woven-render",
    "crates/woven-common",
    "crates/woven-ctrl",
    "crates/woven-protocols",
    "crates/woven-plugin",
]
resolver = "2"

[workspace.dependencies]
# async
tokio             = { version = "1",    features = ["full"] }
anyhow            = "1"
thiserror         = "2"
async-trait       = "0.1"
crossbeam-channel = "0.5"

# lua vm
mlua = { version = "0.10", features = ["lua54", "send", "async", "vendored"] }

# wayland
smithay-client-toolkit = "0.20"
wayland-client         = "0.31"
# staging enables ext::foreign_toplevel_list, ext::image_copy_capture, ext::image_capture_source
wayland-protocols      = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr  = { version = "0.3",  features = ["client"] }

# serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# xcb for xwayland pid resolution
xcb = "1.3"

# http (sync, minimal)
ureq = "3.3"

# rendering
tiny-skia = "0.11"
fontdue   = "0.9"
chrono    = { version = "0.4", features = ["clock"] }

# shm + mmap for screencopy frame buffers
rustix = { version = "1", features = ["event", "mm", "fs", "time"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
